@@ -94,3 +94,4 @@ importFrom(stats, model.matrix, p.adjust, princomp, t.test,
 
 importFrom(utils, read.table, write.csv, write.table)
 
+importFrom(limma,nonEstimable)
